Fixed spacing issues

--- a/style/general.css
+++ b/style/general.css
@@ -34,6 +34,7 @@ header {
 }
 
 main {
+    min-height: 80vh;
     background-image: url('../assets/site_pics/jumbo.jpeg');
     background-size: cover;
 }
